fix summer view's custom column sizes on mobile resolutions

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -72,6 +72,8 @@
   .grid-row:first-child
     .grid-item
       width 50%
+      @media breakpoint4
+        width auto
 
 #summer, #winter
   .view-content
